--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,59 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %} Flex! {% endblock %}</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
+        <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+
         {% block stylesheets %}{% endblock %}
+
+
     </head>
     <body>
-        {% block body %}{% endblock %}
+    <div class="container-fluid">
+	    <nav class="navbar is-primary">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="{{ path('welcome') }}">
+                   FLEXY
+                </a>
+
+                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
+            </div>
+            <div class="navbar-end">
+                <a class="navbar-item" href="{{ path('welcome') }}">
+                    Home
+                </a>
+                <a class="navbar-item" href="{{ path('product_index') }}">
+                    Produtos
+                </a>
+                <a class="navbar-item" href="{{ path('tag_index') }}">
+                    Tags
+                </a>
+            </div>
+        </nav>
+
+        <div style={margin-top="10px"}>
+            {% include 'includes/messages.html.twig' %}
+            <script>
+                document.addEventListener('DOMContentLoaded', () => {
+                    (document.querySelectorAll('.notification .delete') || []).forEach(($delete) => {
+                        $notification = $delete.parentNode;
+
+                        $delete.addEventListener('click', () => {
+                            $notification.parentNode.removeChild($notification);
+                        });
+                    });
+                });
+            </script>
+        </div>
+
+            {% block body %}{% endblock %}
+        </div>
+
         {% block javascripts %}{% endblock %}
     </body>
 </html>
